--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -26,7 +26,7 @@
     box-shadow: rgba(57, 56, 56, 0.24) 0px 2px 6px;
     border-radius: 8px;
     padding: 2rem;
-    background: linear-gradient(rgb(253, 252, 252), rgb(255 255 255) 50%, rgb(253, 253, 252) 100%);
+    background: var(--color-white);
     margin-bottom: 1.5rem;
     position: absolute;
     bottom: -5rem;
@@ -43,7 +43,7 @@
     bottom: 15rem;
     right: -4rem;
     z-index: 999;
-    color: #000;
+ 
 }
 .modal-close:hover{
     background-color : rgb(27 26 26 / 45%);
