--- a/src/pages/Profile/profile.css
+++ b/src/pages/Profile/profile.css
@@ -11,6 +11,7 @@
 .handle{
     display: flex;
     justify-content: space-between;
+    margin-top: 1rem;
 }
 .uil.uil-edit{
 cursor: pointer;
